Create a $global-border-box variable to fix an default overwrite for the border-box value inside normalize.css

--- a/Ressources/Private/Sass/_settings/_defaults.scss
+++ b/Ressources/Private/Sass/_settings/_defaults.scss
@@ -14,6 +14,9 @@
 // this has to be relative to the .html document
 $template-path:         "typo3conf/ext/#{$package_name}/" !default;
 
+// Set the box-sizing of all elements to 'border-box'
+$global-border-box:     true !default;
+
 // Is this project a responsive one?
 $responsive:            false !default;
 
