--- a/Ressources/Private/Sass/generic/_normalize.scss
+++ b/Ressources/Private/Sass/generic/_normalize.scss
@@ -174,9 +174,11 @@ input[type="radio"] {
  */
 input[type="search"] {
   -webkit-appearance: textfield; /* 1 */
-  -webkit-box-sizing: content-box; /* 2 */
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
+  @if $global-border-box == false {
+    -webkit-box-sizing: content-box; /* 2 */
+       -moz-box-sizing: content-box;
+            box-sizing: content-box;
+  }
 }
 
 /**
