Remove the sub file-headers if the compass env is set to ':production'

--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -1,9 +1,9 @@
-/*!
+@if compass-env() == 'development' {/*!
  * High-level wrapper elements
  *
  * @package #{$package_name()}
  * @path base/_base.scss
- */
+ */}
 
 
 /* =============================================================================
