--- a/Ressources/Private/Sass/base/_headings.scss
+++ b/Ressources/Private/Sass/base/_headings.scss
@@ -1,9 +1,9 @@
-/*!
+@if compass-env() == 'development' {/*!
  * Basic styling for headings and sub-headings
  *
  * @package #{$package_name()}
  * @path base/_headings.scss
- */
+ */}
 
 
 /* =============================================================================
