--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -1,10 +1,10 @@
-/*!
+@if compass-env() == 'development' {/*!
  * Basic styling for all typographic related elements e.g.
  * <b>, <sup>, <i>
  *
  * @package #{$package_name()}
  * @path base/_typography.scss
- */
+ */}
 
 
 /* =============================================================================
