--- a/Ressources/Private/Sass/generic/_brand.scss
+++ b/Ressources/Private/Sass/generic/_brand.scss
@@ -1,9 +1,9 @@
-/*!
+@if compass-env() == 'development' {/*!
  * Gernerated classes for brand related styling
  *
  * @package #{$package_name()}
  * @path generic/_brand.scss
- */
+ */}
 
 
 
