--- a/Ressources/Private/Sass/generic/_normalize.scss
+++ b/Ressources/Private/Sass/generic/_normalize.scss
@@ -1,11 +1,11 @@
-/*!
+@if compass-env() == 'development' {/*!
  * A cut-down version of normalize.css
  *
  * @package #{$package_name()}
  * @path generic/_normalize.scss
  * @author Nicolas Gallagher
  * @link http://necolas.github.com/normalize.css/
- */
+ */}
 
 
 /* =============================================================================
