--- a/Ressources/Private/Sass/generic/_print.scss
+++ b/Ressources/Private/Sass/generic/_print.scss
@@ -1,10 +1,10 @@
-/*!
+@if compass-env() == 'development' {/*!
  * Print styles - Inlined to avoid another HTTP connection
  *
  * @package #{$package_name()}
  * @path generic/_print.scss
  * @link http://h5bp.com/r
- */
+ */}
 
 
 @media print {
