--- a/Ressources/Private/Sass/generic/_t3-general.scss
+++ b/Ressources/Private/Sass/generic/_t3-general.scss
@@ -1,9 +1,9 @@
-/*!
+@if compass-env() == 'development' {/*!
  * Styling for typo3 related classes
  *
  * @package #{$package_name()}
  * @path generic/_t3-general.scss
- */
+ */}
 
 
 /* =============================================================================
