Add a styles.scss file for site dependent stylings

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -74,6 +74,12 @@ $package_name: t3b_frontend;
 
 
 // =============================================================================
+// Site dependent styles
+// =============================================================================
+@import "styles";
+
+
+// =============================================================================
 // Helpers and print styles
 // =============================================================================
 // 1. "generic/_helper"         - Usefull helper classes
