Add another example of the mq-unit explanation

--- a/Ressources/Private/Sass/_variables.scss
+++ b/Ressources/Private/Sass/_variables.scss
@@ -132,7 +132,7 @@ $body-background:       #fff;
 $content-background:    #fff;
 
 // default units for media-query mixins - it must include a digit e.g.:
-// $mq-unit: 1em;
+// $mq-unit: 1em; or $mq-unit: 1px;
 $mq-unit:               1px;
 
 
