--- a/Ressources/Private/Sass/_settings/_defaults.scss
+++ b/Ressources/Private/Sass/_settings/_defaults.scss
@@ -10,79 +10,45 @@
 // =============================================================================
 // Project settings
 // =============================================================================
-// The template-root path, used to generate the box-sizing.htc path,
-// this has to be relative to the .html document
 $template-path:         "typo3conf/ext/#{$package_name}/" !default;
-
-// Set the box-sizing of all elements to 'border-box'
 $global-border-box:     true !default;
-
-// Is this project a responsive one?
 $responsive:            false !default;
 
 // Legacy browser support
 $legacy-support-for-ie6: false;
 $legacy-support-for-ie7: false;
 $legacy-support-for-ie8: true;
-
-// Browser support for 'false'
-// Google Chrome
-// Mozilla Firefox 4+
-// Apple Safari 5+
-// Opera 12+
-// Internet Explorer 8+
 $legacy-normalizecss:   false !default;
 
-// Reading direction of this project, if set to 'rtl' texts, labels
-// and the grid will be aligned to the right side of the document
 $direction:             ltr !default;
 
 
 // =============================================================================
 // Brand related variables
 // =============================================================================
-// Your main brand color
 $brand-color:           #0097d7 !default;
-
-// Your main brand Font-Family
 $brand-font-family:     "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-
-// If your layout makes use of rounded corners, you can specify an Border-Radius
-// here to have a consistent setting.
 $brand-border-radius:   1px !default;
-
-// If you want to use the image-replacement technique for your brand logo,
-// set this to the image-name of your brand logo e.g.:
-// $brand-logo_image:      'brand-logo.png';
-//
-// Be aware that you need to place the image inside your images_dir as
-// specified inside the config.rb - otherwise compass will throw an error
 $brand-logo_image:      false !default;
 
 
 // =============================================================================
 // Base Typesetting
 // =============================================================================
-// Font-family stack variables to standardize the font-setting
 $sans-font-family:      "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $serif-font-family:     Georgia, "Times New Roman", Times, serif !default;
-$mono-font-family:      Menlo, Monaco, Consolas, "Courier New", monospace !default; // Will be set on elements like <code> etc.
+$mono-font-family:      Menlo, Monaco, Consolas, "Courier New", monospace !default;
 
-// The font-weights below are used to handle webfonts and consistent stylings
 $bold:                  700 !default;
 $regular:               400 !default;
 $light:                 300 !default;
 
-// Base font settings wich will be set on the '<body>' element,
-// '$base-font-size' and '$base-line-height' are set in pixels
 $base-font-size:        16 !default;
 $base-line-height:      24 !default;
 $base-font-family:      $sans-font-family !default;
 $base-font-weight:      $regular !default;
 $base-text-color:       #3C474B !default;
 
-// Typographic spacings (in pixels), these default values will
-// output a basic vertical rythm based on your '$base-line-height'
 $basic-spacing:         $base-line-height !default;
 $half-spacing:          $basic-spacing / 2 !default;
 
@@ -90,17 +56,10 @@ $half-spacing:          $basic-spacing / 2 !default;
 // =============================================================================
 // Headings
 // =============================================================================
-// If all headings use a different font-family than the '$base-font-family'
-// change this variable from 'false' to a proper font-stack
 $headings-font-family:  false !default;
-
-// Font-weight fpr all headings
 $headings-font-weight:  $bold !default;
-
-// Color for all headings
 $headings-color:        #000 !default;
 
-// Heading font-sizes (in pixels)
 $h1-size:               36 !default;
 $h2-size:               30 !default;
 $h3-size:               24 !default;
@@ -112,40 +71,20 @@ $h6-size:               14 !default;
 // =============================================================================
 // Layout
 // =============================================================================
-// Basic layout width (in pixels) - will be set on the '.site-wrapper' class
 $layout-width:          rs(960) !default;
-
-// Is this layout centered? If set to 'true' the '.wrapper' class will be centered
 $centered-layout:       true !default;
-
-// Inner spacing for all grid-items
 $column-gutter:         20px !default;
-
-// The background wich will be set on the <body> element, you can also pass in
-// other arguments e.g.:
-// $body-background: image-url('body-bg.gif') top left repeat-x #fff;
 $body-background:       #fff !default;
-
-// Used to generate some colors, this doesn't have any direct effect on
-// the .site-content container or its background.
 $content-background:    #fff !default;
-
-// default units for media-query mixins - it must include a digit e.g.:
-// $mq-unit: 1em !default;
 $mq-unit:               1px !default;
 
 
 // =============================================================================
 // Design related variables
 // =============================================================================
-// Default color for all anchors and links
 $link-color:            $brand-color !default;
-
-// Default background and color for submit buttons and the 'btn' object
 $button-background:     $brand-color !default;
 $button-color:          color-adjust($brand-color, 100%) !default;
-
-// Default styling for horizontal rules and bordered elements like tables
 $basic-border-color:    color-adjust($content-background, 20%) !default;
 $basic-border-style:    solid !default;
 
@@ -153,5 +92,4 @@ $basic-border-style:    solid !default;
 // =============================================================================
 // Compass default variables
 // =============================================================================
-// Sets the default border-radius for the compass mixin 'border-radius'
 $default-border-radius: $brand-border-radius;
