Add several text-input variables to ensure no additional styling gets into the base-forms file

--- a/Ressources/Private/Sass/_variables.scss
+++ b/Ressources/Private/Sass/_variables.scss
@@ -150,6 +150,15 @@ $basic-border-style:    solid;
 // =============================================================================
 // Forms
 // =============================================================================
+$text-input-height:     $base-line-height +px; // The height of the element itself
+$text-input-spacing:    $half-spacing; // The basic bottom-margin on all text-inputs
+$text-input-border:     1px solid $basic-border-color;
+$text-input-borderRadius: $brand-border-radius;
+$text-input-boxShadow:  inset 0 1px 1px rgba(#000, 0.075);
+
+$text-input-fontSize:   14;
+$text-input-color:      lighten($base-text-color, 5%);
+
 // Default background and color for submit buttons and the 'btn' object
 $button-background:     $brand-color;
 $button-color:          color-adjust($brand-color, 100%);
