--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -24,17 +24,17 @@ input[type="datetime-local"],
 input[type="month"],
 input[type="time"],
 input[type="week"] {
-  height: $base-line-height +px;
+  height: $text-input-height;
   padding: 0 0.4em;
   @include rem(margin-bottom, $half-spacing);
 
   background: $content-background;
-  border: 1px solid $basic-border-color;
-  border-radius: $brand-border-radius;
-  @include box-shadow(inset 0 1px 1px rgba(#000, 0.075));
+  border: $text-input-border;
+  border-radius: $text-input-borderRadius;
+  @include box-shadow($text-input-boxShadow);
 
-  @include font-size(14);
-  color: lighten($base-text-color, 5%);
+  @include font-size($text-input-fontSize);
+  color: $text-input-color;
 }
 textarea {
   height: auto; /* Reset height since textareas have the attribute rows="" */
