--- a/Ressources/Private/Layouts/Page.html
+++ b/Ressources/Private/Layouts/Page.html
@@ -5,11 +5,11 @@
 
 
 <f:render partial="Page/Header" arguments="{_all}" />
-<div class="site-content" role="main">
+<main class="site-content" role="main">
 	<div class="site-wrapper">
 		<!-- TYPO3SEARCH_begin -->
 		<f:render section="Main" arguments="{_all}" />
 		<!-- TYPO3SEARCH_end -->
 	</div>
-</div>
+</main>
 <f:render partial="Page/Footer" arguments="{_all}" />
