Add the pkg.homepage to the main.css description

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -2,7 +2,7 @@
 $package_name: t3b_frontend;
 /*!
  * Compiled on: #{timestamp()}
- * Base stylesheet for this template-package
+ * Base stylesheet for pkg.homepage
  *
  * @package #{$package_name()}
  * @path /main.scss
