Fix an inconsistency regarding the pkg.name  inside the replace task

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-$package_name: t3b_frontend;
+$package_name: pkg.name;
 /*!
  * Compiled on: #{timestamp()}
  * Base stylesheet for pkg.homepage
