Rename this extension from t3b_frontend to t3b_template

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -16,7 +16,7 @@ $package_name: pkg.name;
 // SASS Setup
 // =============================================================================
 // 1. "compass/css3"            - All compass CSS3 mixins and functions
-// 2. "_settings/_all"          - Mixins, functions and default vars from t3b_frontend
+// 2. "_settings/_all"          - Mixins, functions and default vars from t3b_template
 // =============================================================================
 @import "compass/css3",
         "_settings/_all",
