--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-$package_name: pkg.name;
+$package_name: pkg_name;
 /*!
  * Compiled on: #{timestamp()}
  * Base stylesheet for pkg.homepage
