--- a/Ressources/Private/Templates/Page/standard.html
+++ b/Ressources/Private/Templates/Page/standard.html
@@ -7,7 +7,7 @@
 	<flux:flexform id="standard-page" label="Standard page">
 		<flux:flexform.grid>
 			<flux:flexform.grid.row>
-				<flux:flexform.grid.column colPos="0" name="Content" />
+				<flux:flexform.grid.column colPos="0" name="Main Content" />
 			</flux:flexform.grid.row>
 		</flux:flexform.grid>
 	</flux:flexform>
