[BUGFIX] Added an missing underscore in the _styles.scss import rule

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -76,7 +76,7 @@ $package_name: pkg_name;
 // =============================================================================
 // Site dependent styles
 // =============================================================================
-@import "styles";
+@import "_styles";
 
 
 // =============================================================================
