--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -1,7 +1,7 @@
-{namespace t3bc=T3b\T3bCommon\ViewHelpers}
+{namespace vhs=Tx_Vhs_ViewHelpers}
 
-<t3bc:resource.css src="EXT:t3b_template/Resources/Public/Stylesheets/main.css" />
-<t3bc:resource.js src="EXT:t3b_template/Resources/Public/Javascripts/Libaries/modernizr-2.6.2.min.js" />
+<vhs:asset.style standalone="1" path="EXT:t3b_template/Resources/Public/Stylesheets/main.css" />
+<vhs:asset.script allowMoveToFooter="0" path="EXT:t3b_template/Resources/Public/Javascripts/Libaries/modernizr-2.6.2.min.js" />
 
 
 <f:render partial="Page/Header" arguments="{_all}" />
