[MISC] Set a consistent name scheme for files and folders

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -2,7 +2,7 @@
  * Basic styling for forms and inputs
  *
  * @package #{$package_name()}
- * @path base/_forms.scss
+ * @path Base/_Forms.scss
  */}
 
 
