--- a/Resources/Private/Sass/Base/_Headings.scss
+++ b/Resources/Private/Sass/Base/_Headings.scss
@@ -2,7 +2,7 @@
  * Basic styling for headings and sub-headings
  *
  * @package #{$package_name()}
- * @path base/_headings.scss
+ * @path Base/_Headings.scss
  */}
 
 
