--- a/Resources/Private/Sass/Base/_Links.scss
+++ b/Resources/Private/Sass/Base/_Links.scss
@@ -2,7 +2,7 @@
  * Basic styling for anchor tags
  *
  * @package #{$package_name()}
- * @path base/_links.scss
+ * @path Base/_Links.scss
  */}
 
 
