--- a/Resources/Private/Sass/Base/_Lists.scss
+++ b/Resources/Private/Sass/Base/_Lists.scss
@@ -2,7 +2,7 @@
  * Basic styling for lists and definition elements
  *
  * @package #{$package_name()}
- * @path base/_lists.scss
+ * @path Base/_Lists.scss
  */}
 
 
