--- a/Resources/Private/Sass/Base/_Media.scss
+++ b/Resources/Private/Sass/Base/_Media.scss
@@ -3,7 +3,7 @@
  * <img>, <video>, <svg>, <augio>
  *
  * @package #{$package_name()}
- * @path base/_media.scss
+ * @path Base/_Media.scss
  */}
 
 
