--- a/Resources/Private/Sass/Base/_Tables.scss
+++ b/Resources/Private/Sass/Base/_Tables.scss
@@ -2,7 +2,7 @@
  * Basic styling and extended classes for tables
  *
  * @package #{$package_name()}
- * @path base/_tables.scss
+ * @path Base/_Tables.scss
  */}
 
 
