--- a/Resources/Private/Sass/Generic/_Helper.scss
+++ b/Resources/Private/Sass/Generic/_Helper.scss
@@ -2,7 +2,7 @@
  * Helper Classes from the boilerplate project
  *
  * @package #{$package_name()}
- * @path generic/_helper.scss
+ * @path Generic/_Helper.scss
  * @link http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
  */}
 
