--- a/Resources/Private/Sass/Generic/_Print.scss
+++ b/Resources/Private/Sass/Generic/_Print.scss
@@ -2,7 +2,7 @@
  * Print styles - Inlined to avoid another HTTP connection
  *
  * @package #{$package_name()}
- * @path generic/_print.scss
+ * @path Generic/_Print.scss
  * @link http://h5bp.com/r
  */}
 
