--- a/Resources/Private/Sass/Generic/_Widths.scss
+++ b/Resources/Private/Sass/Generic/_Widths.scss
@@ -4,7 +4,7 @@
  * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
  * @package #{$package_name()}
- * @path generic/_widths.scss
+ * @path Generic/_Widths.scss
  * @license Apache License, Version 2.0.
  */}
 
