--- a/Resources/Private/Sass/Objects/_Grid.scss
+++ b/Resources/Private/Sass/Objects/_Grid.scss
@@ -2,7 +2,7 @@
  * Gernerated- & Helper-classes for a column based grid
  *
  * @package #{$package_name()}
- * @path generic/_grid.scss
+ * @path Objects/_Grid.scss
  */}
 
 
