--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -2,7 +2,7 @@
 // Variables, variables, variables!
 //
 // @package #{$package_name()}
-// @path settings/_variables.sass
+// @path /_Variables.sass
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 //
 
