--- a/Resources/Private/Sass/_settings/_Functions.scss
+++ b/Resources/Private/Sass/_settings/_Functions.scss
@@ -2,7 +2,7 @@
 // SASS Functions
 //
 // @package #{$package_name()}
-// @path  _settings/_functions.sass
+// @path  _Settings/_Functions.sass
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#function_directives
 //
 
