--- a/Resources/Private/Sass/_settings/_Mixins.scss
+++ b/Resources/Private/Sass/_settings/_Mixins.scss
@@ -2,7 +2,7 @@
 // SASS Mixins
 //
 // @package #{$package_name()}
-// @path settings/_mixins.scss
+// @path _settings/_Mixins.scss
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixins
 //
 
