--- a/Resources/Public/Stylesheets/main.css
+++ b/Resources/Public/Stylesheets/main.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 /*
- * Compiled on: Wed Jul 03 00:18:28 +0200 2013
+ * Compiled on: Thu Jul 25 16:21:46 +0200 2013
  * Base stylesheet for pkg.homepage
  *
  * @package pkg_name
- * @path /main.scss
+ * @path /Main.scss
  * @author pkg.author.name <pkg.author.email>
 
 
