--- a/Resources/Private/Sass/Generic/_Brand.scss
+++ b/Resources/Private/Sass/Generic/_Brand.scss
@@ -2,7 +2,7 @@
  * Gernerated classes for brand related styling
  *
  * @package #{$package_name()}
- * @path generic/_brand.scss
+ * @path Generic/_Brand.scss
  */}
 
 
