--- a/Resources/Private/Sass/Generic/_Normalize.scss
+++ b/Resources/Private/Sass/Generic/_Normalize.scss
@@ -2,7 +2,7 @@
  * A cut-down version of normalize.css
  *
  * @package #{$package_name()}
- * @path generic/_normalize.scss
+ * @path Generic/_Normalize.scss
  * @author Nicolas Gallagher
  * @link http://necolas.github.com/normalize.css/
  */}
