--- a/Resources/Private/Sass/Generic/_T3General.scss
+++ b/Resources/Private/Sass/Generic/_T3General.scss
@@ -2,7 +2,7 @@
  * Styling for typo3 related classes
  *
  * @package #{$package_name()}
- * @path generic/_t3-general.scss
+ * @path Generic/_T3General.scss
  */}
 
 
