--- a/Resources/Private/Sass/Objects/_Buttons.scss
+++ b/Resources/Private/Sass/Objects/_Buttons.scss
@@ -3,7 +3,7 @@
  * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
  * @package #{$package_name()}
- * @path objects/_buttons.scss
+ * @path Objects/_Buttons.scss
  * @license Apache License, Version 2.0.
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
  */}
