--- a/Resources/Private/Sass/_settings/_MediaQueries.scss
+++ b/Resources/Private/Sass/_settings/_MediaQueries.scss
@@ -2,7 +2,7 @@
 // Media-Query SASS Mixins
 //
 // @package #{$package_name()}
-// @path settings/_media-queries.scss
+// @path _Settings/_MediaQueries.scss
 // @author Rafal Bromirski <http://paranoida.com/>, Tyll Weiß <inkdpixels@gmail.com>
 // @license MIT <http://opensource.org/licenses/MIT>
 // @link https://github.com/paranoida/sass-mediaqueries
