--- a/Resources/Private/Sass/Objects/_Grid.scss
+++ b/Resources/Private/Sass/Objects/_Grid.scss
@@ -18,20 +18,20 @@ $ Grid Classes
  * A basic grid system wich is dependent on the border-box layout mode
  * e.g.
  *
-  <div class="gw">
+  <div class="grid">
     <div class="gi one-third"> </div>
     <div class="gi one-third"> </div>
     <div class="gi one-third"> </div>
   </div>
 ================================================================================ */
-.gw,
-.grid-wrapper {
+.g,
+.grid {
   @extend .cf;
   margin-left: -($column-gutter / 2);
   margin-right: -($column-gutter / 2);
 }
 .gi,
-.grid-item {
+.grid__item {
   // Base styles for .gi--# classes
   float: $grid-direction;
   padding-left: ($column-gutter / 2);
