[DOCS] Use the grid shortcut instead of the full name of the class

--- a/Resources/Private/Sass/Objects/_Grid.scss
+++ b/Resources/Private/Sass/Objects/_Grid.scss
@@ -18,7 +18,7 @@ $ Grid Classes
  * A basic grid system wich is dependent on the border-box layout mode
  * e.g.
  *
-  <div class="grid">
+  <div class="g">
     <div class="gi one-third"> </div>
     <div class="gi one-third"> </div>
     <div class="gi one-third"> </div>
