[MISC] Rename some mixin parameters to make those easier to understand

--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -21,8 +21,8 @@
 //     font-size: rs(19, 16);
 //   }
 // =============================================================================
-@function rs($target, $context: $base-font-size, $unit: em) {
-  @return #{$target/$context}$unit;
+@function rs($target-size, $context: $base-font-size, $unit: em) {
+  @return #{$target-size/$context}$unit;
 }
 
 
