--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -12,7 +12,7 @@
 // =============================================================================
 // @description Calculates em's based on pixel values
 //
-// @param target, context, unit
+// @param target-size, context, unit
 // @returns
 //   1.1875em
 //
