--- a/Resources/Private/Sass/_Settings/_Mixins.scss
+++ b/Resources/Private/Sass/_Settings/_Mixins.scss
@@ -73,7 +73,7 @@
 //   }
 // =============================================================================
 @mixin image-replacement($file-name, $display-mode: block) {
-  @if $ile-name { // Output the image dimensions if an image is passed as an argument
+  @if $file-name { // Output the image dimensions if an image is passed as an argument
     display: $display-mode;
     @include img-wh('#{$file-name}');
     @extend .ir;
