--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -1,7 +1,7 @@
 {namespace vhs=Tx_Vhs_ViewHelpers}
 
-<vhs:asset.style standalone="1" path="EXT:t3b_template/Resources/Public/Stylesheets/Main.css" />
-<vhs:asset.script allowMoveToFooter="0" path="EXT:t3b_template/Resources/Private/Javascripts/Libaries/Modernizr/modernizr.js" />
+<vhs:asset.style standalone="1" path="EXT:<!= pkg.name !>/Resources/Public/Stylesheets/Main.css" />
+<vhs:asset.script allowMoveToFooter="0" path="EXT:<!= pkg.name !>/Resources/Private/Javascripts/Libaries/Modernizr/modernizr.js" />
 
 
 <f:render partial="Page/Header" arguments="{_all}" />
