--- a/Resources/Private/Templates/Page/Page.html
+++ b/Resources/Private/Templates/Page/Page.html
@@ -1,5 +1,5 @@
 {namespace flux=Tx_Flux_ViewHelpers}
-{namespace vhs=Tx_Vhs_ViewHelpers}
+{namespace v=Tx_Vhs_ViewHelpers}
 
 <f:layout name="Page" />
 
@@ -15,6 +15,6 @@
 	</f:section>
 
 	<f:section name="Main">
-		<vhs:page.content.render column="0" />
+		<v:page.content.render column="0" />
 	</f:section>
 </div>
