--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -11,21 +11,21 @@
 // Project settings
 // =============================================================================
 // The template-root path, used to generate the box-sizing.htc path,
-// this has to be relative to the .html document
+// this has to be relative to the .html document.
 $template-path:         "typo3conf/ext/#{$package_name}/";
 
-// Set the box-sizing of all elements to 'border-box'
+// Set the box-sizing of all elements to 'border-box'.
 $global-border-box:     true;
 
 // Is this project a responsive one?
 $responsive:            false;
 
-// Legacy browser support
+// Legacy browser support.
 $legacy-support-for-ie6: false;
 $legacy-support-for-ie7: false;
 $legacy-support-for-ie8: true;
 
-// Browser support for 'false'
+// Browser support for 'false':
 // Google Chrome
 // Mozilla Firefox 4+
 // Apple Safari 5+
@@ -34,7 +34,7 @@ $legacy-support-for-ie8: true;
 $legacy-normalizecss:   false;
 
 // Reading direction of this project, if set to 'rtl' texts, labels
-// and the grid will be aligned to the right side of the document
+// and the grid will be aligned to the right side of the document.
 $direction:             ltr;
 
 
@@ -56,7 +56,7 @@ $brand-border-radius:   1px;
 // $brand-logo_image:      'brand-logo.png';
 //
 // Be aware that you need to place the image inside your images_dir as
-// specified inside the config.rb - otherwise compass will throw an error
+// specified inside the config.rb - otherwise compass will throw an error.
 $brand-logo_image:      false;
 
 
@@ -68,13 +68,13 @@ $sans-font-family:      "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif-font-family:     Georgia, "Times New Roman", Times, serif;
 $mono-font-family:      Menlo, Monaco, Consolas, "Courier New", monospace; // Will be set on elements like <code> etc.
 
-// The font-weights below are used to handle webfonts and consistent stylings
+// The font-weights below are used to handle webfonts and consistent stylings.
 $bold:                  700;
 $regular:               400;
 $light:                 300;
 
 // Base font settings wich will be set on the '<body>' element,
-// '$base-font-size' and '$base-line-height' are set in pixels
+// '$base-font-size' and '$base-line-height' are pixel values.
 $base-font-size:        16;
 $base-line-height:      24;
 $base-font-family:      $sans-font-family;
@@ -82,7 +82,7 @@ $base-font-weight:      $regular;
 $base-text-color:       #3C474B;
 
 // Typographic spacings (in pixels), these default values will
-// output a basic vertical rythm based on your '$base-line-height'
+// output a basic vertical rythm based on your '$base-line-height'.
 $basic-spacing:         $base-line-height;
 $half-spacing:          $basic-spacing / 2;
 
@@ -91,16 +91,16 @@ $half-spacing:          $basic-spacing / 2;
 // Headings
 // =============================================================================
 // If all headings use a different font-family than the '$base-font-family'
-// change this variable from 'false' to a proper font-stack
+// change this variable from 'false' to a proper font-stack.
 $headings-font-family:  false;
 
-// Font-weight fpr all headings
+// Font-weight fpr all headings.
 $headings-font-weight:  $bold;
 
-// Color for all headings
+// Color for all headings.
 $headings-color:        #000;
 
-// Heading font-sizes (in pixels)
+// Heading font-sizes (in pixels).
 $h1-size:               36;
 $h2-size:               30;
 $h3-size:               24;
@@ -113,13 +113,13 @@ $h6-size:               14;
 // Layout
 // =============================================================================
 // Basic layout width (in pixels) - will be set on the '.site-wrapper' class
-// The value is wrapped in the relative-size function wich converts pixels into em's
+// The value is wrapped in the relative-size function wich converts pixels into em's.
 $layout-width:          rs(960);
 
-// Is this layout centered? If set to 'true' the '.wrapper' class will be centered
+// Is this layout centered? If set to 'true' the '.wrapper' class will be centered.
 $centered-layout:       true;
 
-// Inner spacing for all grid-items
+// Inner spacing for all grid-items.
 $column-gutter:         20px;
 
 // The background wich will be set on the <body> element, you can also pass in
@@ -139,10 +139,10 @@ $mq-unit:               1px;
 // =============================================================================
 // Design related variables
 // =============================================================================
-// Default color for all anchors and links
+// Default color for all anchors and links.
 $link-color:            $brand-color;
 
-// Default styling for horizontal rules and bordered elements like tables
+// Default styling for horizontal rules and bordered elements like tables.
 $basic-border-color:    color-adjust($content-background, 20%);
 $basic-border-style:    solid;
 
@@ -150,10 +150,10 @@ $basic-border-style:    solid;
 // =============================================================================
 // Forms
 // =============================================================================
-// The height of the element itself
+// The height of the element itself.
 $text-input-height:     $base-line-height +px;
 
-// The basic bottom-margin on all text-inputs
+// The basic bottom-margin on all text-inputs.
 $text-input-spacing:    $half-spacing;
 
 $text-input-border:     1px solid $basic-border-color;
@@ -166,9 +166,9 @@ $text-input-color:      lighten($base-text-color, 5%);
 // =============================================================================
 // Buttons
 // =============================================================================
-// The basic bottom-margin on all text-inputs
+// The basic bottom-margin on all text-inputs.
 $button-spacing:        $half-spacing;
-// Set in em's so we can change the size of the button depending on the font-size
+// Set in em's so we can change the size of the button depending on the font-size.
 $button-inner-spacing:  0.5em 0.75em;
 $button-font-size:      .8em;
 $button-background:     $brand-color;
@@ -178,5 +178,5 @@ $button-color:          color-adjust($button-background, 100%);
 // =============================================================================
 // Compass default variables
 // =============================================================================
-// Sets the default border-radius for the compass mixin 'border-radius'
+// Sets the default border-radius for the compass mixin 'border-radius'.
 $default-border-radius: $brand-border-radius;
