[TASK] Remove the compass-env check for all file-headers

--- a/Resources/Private/Sass/Base/_Lists.scss
+++ b/Resources/Private/Sass/Base/_Lists.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Basic styling for lists and definition elements
  *
  * @package #{$package_name()}
  * @path Base/_Lists.scss
- */}
+ */
 
 
 /* =============================================================================
