--- a/Resources/Private/Sass/Base/_Tables.scss
+++ b/Resources/Private/Sass/Base/_Tables.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Basic styling and extended classes for tables
  *
  * @package #{$package_name()}
  * @path Base/_Tables.scss
- */}
+ */
 
 
 /* =============================================================================
