--- a/Resources/Private/Sass/Generic/_Normalize.scss
+++ b/Resources/Private/Sass/Generic/_Normalize.scss
@@ -1,11 +1,11 @@
-@if compass-env() == 'development' {/*!
+/*!
  * A cut-down version of normalize.css
  *
  * @package #{$package_name()}
  * @path Generic/_Normalize.scss
  * @author Nicolas Gallagher
  * @link http://necolas.github.com/normalize.css/
- */}
+ */
 
 
 /* =============================================================================
