--- a/Resources/Private/Sass/Generic/_T3General.scss
+++ b/Resources/Private/Sass/Generic/_T3General.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Styling for typo3 related classes
  *
  * @package #{$package_name()}
  * @path Generic/_T3General.scss
- */}
+ */
 
 
 /* =============================================================================
