--- a/Resources/Private/Sass/Generic/_Widths.scss
+++ b/Resources/Private/Sass/Generic/_Widths.scss
@@ -1,4 +1,4 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Sizes wich are used in conjunction with other objects and
  * abstractions like the grid system, from
  * inuit.css <https://github.com/csswizardry/inuit.css/>
@@ -6,7 +6,7 @@
  * @package #{$package_name()}
  * @path Generic/_Widths.scss
  * @license Apache License, Version 2.0.
- */}
+ */
 
 
 
