--- a/Resources/Private/Sass/Objects/_Grid.scss
+++ b/Resources/Private/Sass/Objects/_Grid.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Grid object wich makes use of the width classes in generic/_widths.scss
  *
  * @package #{$package_name()}
  * @path Objects/_Grid.scss
- */}
+ */
 
 
 // =============================================================================
