--- a/Resources/Private/Sass/_Styles.scss
+++ b/Resources/Private/Sass/_Styles.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Site dependent styles
  *
  * @package #{$package_name()}
  * @path /_Styles.scss
- */}
+ */
 
 
 /* =============================================================================
