--- a/Resources/Private/Sass/Base/_Base.scss
+++ b/Resources/Private/Sass/Base/_Base.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * High-level wrapper elements
  *
  * @package #{$package_name()}
  * @path Base/_Base.scss
- */}
+ */
 
 
 /* =============================================================================
