--- a/Resources/Private/Sass/Base/_Headings.scss
+++ b/Resources/Private/Sass/Base/_Headings.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Basic styling for headings and sub-headings
  *
  * @package #{$package_name()}
  * @path Base/_Headings.scss
- */}
+ */
 
 
 /* =============================================================================
