--- a/Resources/Private/Sass/Base/_Links.scss
+++ b/Resources/Private/Sass/Base/_Links.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Basic styling for anchor tags
  *
  * @package #{$package_name()}
  * @path Base/_Links.scss
- */}
+ */
 
 
 /* =============================================================================
