--- a/Resources/Private/Sass/Generic/_Brand.scss
+++ b/Resources/Private/Sass/Generic/_Brand.scss
@@ -1,9 +1,9 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Gernerated classes for brand related styling
  *
  * @package #{$package_name()}
  * @path Generic/_Brand.scss
- */}
+ */
 
 
 
