--- a/Resources/Private/Sass/Objects/_Buttons.scss
+++ b/Resources/Private/Sass/Objects/_Buttons.scss
@@ -1,4 +1,4 @@
-@if compass-env() == 'development' {/*!
+/*!
  * Basic button structural styling from
  * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
@@ -6,7 +6,7 @@
  * @path Objects/_Buttons.scss
  * @license Apache License, Version 2.0.
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
- */}
+ */
 
 
 /* =============================================================================
